fix long text wrapping in menu

--- a/theme.css
+++ b/theme.css
@@ -158,6 +158,7 @@ h6 {font-size: 0.63rem;}
 		font-family: "Helvetica Neue","Helvetica",Helvetica,Arial,sans-serif;
 		padding: 0px 15px;
 		line-height: 58px;
+		white-space: nowrap;
 	}
 	.top-bar-left > ul > li,
 	.top-bar-right > ul > li,
